<resources>
    <string name="app_name">StreamOfThought</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="username">Your Name</string>
    <string name="followers">Followers: -</string>
    <string name="anon">Do you want your name to be hidden?</string>
    <string name="default_followers">0</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="post">POST</string>
    <string name="na">NA</string>
    <string name="title">title</string>
    <string name="abc">abc</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="display_name">Display Name</string>
    <string name="stream_of_thoughts">Stream of Thoughts</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="your_email_here">Your Email here</string>
    <string name="email">Email: -</string>
    <string name="bio">Bio</string>
    <string name="enter_your_bio_here">Enter your bio here</string>
    <string name="please_enter_your_bio_in_not_more_than_40_words">Please enter your bio in not more than 40 words</string>
    <string name="enter_your_bio_in_not_more_than_40_words">enter_your_bio_in_not_more_than_40_words</string>
    <string name="drafts">Drafts</string>
    <string name="submit">Submit</string>
    <string name="enter_your_note_here">Enter your note here</string>
</resources>