<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.unravel.streamofthought.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.unravel.streamofthought.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.unravel.streamofthought.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.unravel.streamofthought.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/memeFragment"
        android:name="com.unravel.streamofthought.ui.meme.MemeFragment"
        android:label="Memes"
        tools:layout="@layout/fragment_meme" />
    <fragment
        android:id="@+id/blogFragment"
        android:name="com.unravel.streamofthought.ui.blog.BlogFragment"
        android:label="Blog"
        tools:layout="@layout/fragment_blog" />
</navigation>